# historic-bibletime-i18n

./: .cvsignore  Changelog  Makefile.am  README  bibletime-i18n.spec  bibletime-i18n.spec.in  configure.in.in
admin/: acinclude.m4.in
debian/: changelog  control  copyright  rules
docs/: Makefile.am
docs/bg/howto/: Makefile.am
docs/bg/howto/html/: h2-basics-approaches.html  h2-basics-expository.html  h2-basics-interpretation.html  h2-basics-types.html  h2-basics-worksheet.html  h2-basics.html  h2-importance-breathed.html  h2-importance-exhortations.html  h2-importance-liberates.html  h2-importance-once.html  h2-importance-supplement.html  h2-importance-wars.html  h2-importance-works.html  h2-importance.html  h2-rules-context.html  h2-rules-hcontest.html  h2-rules-normal.html  h2-rules-parables.html  h2-rules.html  index.html
docs/bg/howto/po/: how2-basics.po  how2-importance.po  how2-interpretation.po  index.po
docs/bg/howto/unicode/: Makefile.am  how2-basics.docbook  how2-importance.docbook  how2-interpretation.docbook  index.docbook
docs/cs/howto/: Makefile.am
docs/cs/howto/html/: h2-basics-approaches.html  h2-basics-expository.html  h2-basics-interpretation.html  h2-basics.html  (+16 more)
docs/de/: Makefile.am
docs/de/handbook/: Makefile.am
docs/de/helpdialog/: Makefile.am
docs/de/howto/: Makefile.am
docs/fi/: Makefile.am
docs/fi/handbook/: Makefile.am
docs/fi/howto/: Makefile.am
docs/fr/: Makefile.am
docs/fr/howto/: Makefile.am
docs/it/: Makefile.am
docs/it/howto/: Makefile.am
docs/ko/howto/: Makefile.am
docs/nl/: Makefile.am
docs/nl/handbook/: Makefile.am
docs/nl/howto/: Makefile.am
docs/pt-br/: Makefile.am
docs/pt-br/howto/: Makefile.am
docs/ru/howto/: Makefile.am
po/: Makefile.am  af.po  bg.po  cs.po  da.po  de.po  en_GB.po  es.po  fi.po  fr.po  hu.po  it.po  ko.po  nl.po  nn_NO.po  no.po  pl.po  pt_br.po  ro.po  ru.po  sk.po  sv.po  ua.po  zh_CN.po  zh_TW.po
po/handbook/: Makefile.am  de.po  fi.po  fr.po  nl.po
po/howto/: Makefile.am  README.NOEDIT  bg.po  cs.po  de.po  fi.po  fr.po  it.po  ko.po  nl.po  pt-br.po  ru.po
(+312 files in other folders)
